# jimp-exercisesBG

./: README.md
lab1/: CMakeLists.txt
lab1/doublebasepalindromes/: CMakeLists.txt  DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: CMakeLists.txt  Factorial.cpp  Factorial.h  main.cpp
lab1/multiplicationtable/: CMakeLists.txt  MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: CMakeLists.txt  Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: CMakeLists.txt  ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  main.cpp
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: Tree.cpp  Tree.h  main.cpp
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  CMakeLists.txt  main.cpp
lab2/greatestproduct/: CMakeLists.txt  GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  main.cpp  (+1 more)
lab5/: CMakeLists.txt
lab7/: CMakeLists.txt
lab8/: CMakeLists.txt
lab9/: Serialization.cpp  Serialization.h  main.cpp
tests/: CMakeLists.txt
(+91 files in other folders)
